# config_obsidian_python

./: .gitignore  environment.yaml  pyproject.toml  requirements.txt
