[tool.poetry]
name = "obsidian"
version = "0.1.0"
description = ""
authors = ["qiaogaojian <qiaogaojian@vip.qq.com>"]
packages = [
    {include = "src", from="D:/git/Tweaks/tweaks_python"},
    {include = "core", from="D:/git/Tweaks/tweaks_python/src"},
    {include = "common", from="D:/git/Tweaks/tweaks_python/src"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
hexbytes = "^0.2.2"
environs = "^9.5.0"
PyMySQL = "^1.0.2"
redis = "^4.1.4"
pymongo = "^4.3.2"
web3 = "5.13.1"
kafka-python = "^2.0.2"
flask = "^2.2.2"
matplotlib = "^3.6.0"
seaborn = "^0.12.1"
regex = "^2022.10.31"
pyecharts = "^2.0.1"
openai = "^0.26.5"
revchatgpt = "^2.2.6"
edgegpt = "^0.0.48"
pypandoc = "^1.11"
scikit-learn = "^1.2.2"
sympy = "^1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# 设置poetry包管理工具的自定义pypi镜像源配置
[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "default"


[[tool.poetry.source]]
name = "cuda117"
url = "http://download.pytorch.org/whl/cu117"
priority = "explicit"

